fix(profile page): z-index of profile page has been adjusted to work with nav bar and contact menu component

--- a/src/frontend/static/style/components/Contacts/BottomNavContact.css
+++ b/src/frontend/static/style/components/Contacts/BottomNavContact.css
@@ -7,7 +7,7 @@
     right: 0;
     margin-right: 2.5rem;
     margin-bottom: 1rem;
-    z-index: 2;
+    z-index: 3;
 }
 
 .bottom-nav-contacts p {
