--- a/src/frontend/static/style/components/NavBarComponent.css
+++ b/src/frontend/static/style/components/NavBarComponent.css
@@ -5,6 +5,7 @@
 
 nav-bar-component {
     height: 8vh;
+    position: relative;
     z-index: 3;
 }
 
