--- a/src/frontend/static/style/components/Profile/UserInfosComponent.css
+++ b/src/frontend/static/style/components/Profile/UserInfosComponent.css
@@ -5,6 +5,7 @@ user-infos-component {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	z-index: 2;
 }
 
 user-infos-component .user-info {
