--- a/src/frontend/static/style/views/profile.css
+++ b/src/frontend/static/style/views/profile.css
@@ -8,59 +8,3 @@
 	align-items: center;
 	z-index: 2;
 }
-
-
-/* 
-
-
-
-
-#container {
-	width: 100vw;
-	height: fit-content;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.pic {
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	border: 1px solid white;
-}
-
-#container a {
-	cursor: pointer;
-}
-
-#container .info {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: 0;
-    opacity: 0;
-    overflow: hidden;
-    transition: height 0.5s ease-out, opacity 0.5s ease-out;
-}
-
-#container .info.collapse {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: 150px;
-	opacity: 1;
-	border-bottom: 1px solid white;
-	overflow: hidden;
-	transition: height 0.5s ease-out, opacity 0.5s ease-out;
-}
-
-#container .info .enableBtn{
-	text-decoration: none;
-	color: white;
-	background-color: rgba(0, 0, 0, 0.3);
-	padding: 10px 20px;
-	border-radius: 5px;
-} */
